--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,180 @@
+body {
+  background: linear-gradient(
+    44.8deg,
+    rgba(237, 147, 76) 15%,
+    rgba(255, 221, 136, 0.28) 75%
+  );
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+
+.weather-app {
+  max-width: 800px;
+  background-color: rgb(255 255 255 / 30%);
+  padding: 50px;
+  border-radius: 10px;
+  margin: 40px auto;
+}
+
+.btn-primary {
+  background: rgba(255, 255, 255, 0.36);
+  border: 0.5px solid #303345;
+  border-radius: 10px;
+  padding: 8px 11px;
+  color: #303345;
+  text-align: center;
+  width: 100%;
+}
+.btn-primary:hover {
+  background-color: #303345;
+  border: 0.5px solid #303345;
+  color: white;
+}
+
+.btn-primary.current {
+  background-color: #303345;
+  color: white;
+}
+
+input.btn-primary {
+  width: 100%;
+}
+
+input.placeholder {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  padding: 8px 11px;
+  border: 0.5px solid #303345;
+  border-radius: 10px;
+  color: #303345;
+}
+
+input::placeholder {
+  color: #303345;
+}
+
+.block {
+  background: rgba(255, 255, 255, 0.36);
+  border: 0.5px solid rgba(255, 255, 255, 0.4);
+  border-radius: 10px;
+  padding: 8px 11px;
+}
+
+.row {
+  justify-content: space-between;
+}
+
+.result {
+  padding: 20px 0;
+}
+
 h1 {
-  color: red;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 24px;
+  color: #313341;
+}
+
+h2 {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #9a938c;
+}
+
+section#current-weather {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 30px 0;
+  align-items: center;
+}
+
+.current-weather {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  font-size: 24px;
+  gap: 20px;
+}
+
+.current-icon {
+  font-weight: 700;
+  font-size: 85px;
+  line-height: 52px;
+  color: #fbca1c;
+  padding: 0;
+}
+.temperature {
+  font-weight: 700;
+  font-size: 85px;
+  line-height: 60px;
+  color: #303345;
+}
+
+.units {
+  position: relative;
+  top: -42px;
+  font-size: 28px;
+}
+.units a {
+  text-decoration: none;
+  color: #303345;
+}
+.currentDate {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 17px;
+  color: #303345;
+}
+
+.degree {
+  display: flex;
+  flex-direction: column;
+}
+
+.details,
+.next-days {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+ul li {
+  list-style-type: none;
+}
+.row-holder {
+  background: rgba(255, 255, 255, 0.36);
+  border: 0.5px solid rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+  padding: 16px 11px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 8px;
+  color: #303345;
+  margin-bottom: 5px;
+}
+
+.day {
+  text-align: center;
+}
+
+.days-icon {
+  color: #fbca1c;
+  font-size: 20px;
+}
+
+.next-days .row-holder {
+  display: grid;
+  grid-template-columns: 80% 10% 10%;
+  align-items: center;
+  justify-items: start;
+}
+
+.footer {
+  text-align: center;
+  font-size: 12px;
+  padding-bottom: 5px;
 }
