--- a/src/style.css
+++ b/src/style.css
@@ -13,14 +13,16 @@ h1 {
   font-weight: 500;
   font-size: 28px;
   line-height: 24px;
-  color: #313341;
+  /* color: #313341; */
+  color: #5741d7;
 }
 
 h2 {
   font-weight: 400;
   font-size: 12px;
   line-height: 18px;
-  color: #9a938c;
+  /* color: #9a938c; */
+  color: #4a79f3;
 }
 
 .weather-app-wrapper {
@@ -47,7 +49,7 @@ h2 {
 
 #temperature {
   font-weight: 700;
-  font-size: 85px;
+  font-size: 80px;
   line-height: 60px;
   color: #303345;
 }
@@ -84,6 +86,7 @@ input.placeholder {
   border: 0.5px solid #303345;
   border-radius: 10px;
   color: #303345;
+  cursor: auto;
 }
 
 input::placeholder {
@@ -101,7 +104,7 @@ input::placeholder {
   justify-content: space-between;
 }
 
-.result {
+.current-temp {
   padding: 20px 0;
 }
 
@@ -162,7 +165,7 @@ ul li {
 }
 .row-holder {
   background: rgba(255, 255, 255, 0.36);
-  border: 0.5px solid rgba(255, 255, 255, 0.5);
+  /* border: 0.5px solid rgba(255, 255, 255, 0.5); */
   border-radius: 10px;
   padding: 16px 11px;
   font-weight: 400;
