--- a/src/style.css
+++ b/src/style.css
@@ -191,6 +191,23 @@ ul li {
   justify-items: start;
 }
 
+.weather-forcast {
+  text-align: center;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.6;
+}
+
+.weather-forecast-temperatures {
+  font-size: 13px;
+}
+
+span.weather-forecast-temp-min {
+  opacity: 0.6;
+}
+
 .footer {
   text-align: center;
   font-size: 12px;
