--- a/src/style.css
+++ b/src/style.css
@@ -107,37 +107,9 @@ input::placeholder {
 
 .row {
   justify-content: space-between;
-  @media (max-width: 820px) {
-    flex-direction: column;
-  }
 }
 
-@media (max-width: 820px) {
-  .col-md-8 {
-    width: 63%!important;
-    padding: 0px!important;
-  }
-}
 
-@media (max-width: 820px) {
-  .col-md-4 {
-    width: 35%!important;
-    padding: 0px!important;
-  }
-}
-
-@media (max-width: 820px) {
-  .row.mobile {
-    flex-direction: row;
-    gap: 5px;
-  }
-}
-
-.col-6 {
-  @media (max-width: 820px) {
-    width: 100% !important;
-  }
-}
 .current-temp {
   padding: 20px 0;
 }
@@ -198,12 +170,6 @@ ul li {
   list-style-type: none;
 }
 
-ul {
-  @media (max-width: 820px) {
-    margin-block-start:: 0px !important;
-    padding-inline-start: 0px!important;
-  }
-}
 .col-holder {
   background: rgba(255, 255, 255, 0.36);
   border-radius: 10px;
@@ -236,12 +202,6 @@ div#forecast {
 
 .col-2.forecast-days.col-holder {
   width: 13%;
-  @media (max-width: 820px) {
-    width: 100%!important;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
 }
 .weather-forecast-date {
   font-size: 16px;
@@ -268,6 +228,44 @@ a.links {
 .links:hover {
   color: #ed934c !important;
 }
+
+
+@media (max-width: 820px) {
+  .col-6 {
+    width: 100% !important;
+  }
+
+  .col-md-4 {
+    width: 35%!important;
+    padding: 0px!important;
+  }
+
+  .col-md-8 {
+    width: 63%!important;
+    padding: 0px!important;
+  }
+
+  .row.mobile {
+    flex-direction: row;
+    gap: 5px;
+  }
+
+  ul {
+    margin-block-start:: 0px !important;
+    padding-inline-start: 0px!important;
+  }
+  .col-2.forecast-days.col-holder {
+    width: 100%!important;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: space-around;
+    justify-items: center;
+    align-items: center;
+  }
+}
+
+
+
 
 
 
