--- a/src/style.css
+++ b/src/style.css
@@ -233,6 +233,9 @@ a.links {
 
 
 @media (max-width: 820px) {
+  .weather-app {
+    padding: 35px;
+  }
   .col-6 {
     width: 100% !important;
   }
@@ -244,7 +247,7 @@ a.links {
 
   .col-md-8 {
     width: 63%!important;
-    padding: 0px!important;
+    padding: 0 20px!important;
   }
 
   .row.mobile {
